# tasuki

./: .coderabbit.yaml  .gitignore  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  plan.md  pnpm-lock.yaml  vite.config.ts
.claude/commands/: verify-ui.md
.github/: CODEOWNERS  REPO_SETUP.md  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy-pages.yml  release-mac.yml  release.yml  tag-release.yml  version-bump.yml
docs/: AI_WORKFLOW_OPTIMIZATION_DESIGN.md  ARCHITECTURE.md  BACKEND_REDESIGN_PROPOSAL.md  BACKEND_REDESIGN_SPEC.md  BEAUTIFUL_MERMAID_AUDIT.md  COMMIT_GATE_REVIEW_DESIGN.md  COMMIT_GATE_REVIEW_DESIGN_V2.md  FRONTEND_REDESIGN_PROPOSAL.md  FRONTEND_RENDERING_FLOW.md  PIERRE_AUDIT.md  REVIEW_PERSISTENCE_DESIGN.md  USAGE_EXAMPLES.md  ZED_INTEGRATION_DESIGN.md
docs/archive/: DIFF_SEARCH_VIRTUALIZER_DESIGN.md
e2e/: playwright.config.ts
e2e/fixtures/: setup.ts
e2e/tests/: ux1-diff-review.spec.ts  ux4-copy-all.spec.ts  (+6 more)
hooks/: tasuki-commit-gate.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  cmux.rs  commands.rs  error.rs  git.rs  lib.rs  lsp.rs  main.rs  pty.rs  state.rs  watcher.rs
src-tauri/src/commands/: cmux.rs  diff.rs  docs.rs  editor.rs  gate.rs  lsp.rs  mod.rs  review.rs  terminal.rs
src-tauri/src/git/: diff.rs  docs.rs  mod.rs  repo.rs
src-tauri/tests/: git_integration.rs
website/: demo.md  index.md
(+113 files in other folders)
