[package]
name = "tasuki"
version = "0.1.1"
description = "Tasuki — A review assistant tool for Claude Code workflows"
license = "MIT"
repository = "https://github.com/y-oga-819/tasuki"
homepage = "https://github.com/y-oga-819/tasuki"
authors = ["y-oga-819"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tasuki_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "tasuki"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
notify = "8"
notify-debouncer-mini = "0.7"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
glob = "0.3"
sha2 = "0.10"
dirs = "6"
chrono = "0.4"
portable-pty = "0.9"
parking_lot = "0.12"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3.26.0"
